refactor Q5